# clinicadl_handbook

./: .gitignore  Dockerfile  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: build_and_deploy.yml
.jenkins/: Jenkinsfile
data/: adni_after_qc.tsv  analysis.tsv  analysis_adni.tsv  analysis_oasis.tsv  oasis_after_qc.tsv  train_config.toml
data/labels_list/: AD.tsv  CN.tsv  getlabels.json
data/labels_list/test/: AD.tsv  AD_baseline.tsv  CN.tsv  CN_baseline.tsv
data/labels_list/train/: AD.tsv  AD_baseline.tsv  CN.tsv  CN_baseline.tsv
data/labels_list_old/: AD_nolabels.tsv  kfold.json
jupyter-book/: Makefile  _config.yml  _toc.yml  background.md  clinical.md  deep_learning.md  index.md
jupyter-book/_build/.doctrees/: background.doctree  clinical.doctree  deep_learning.doctree  environment.pickle  index.doctree
jupyter-book/_build/html/: .buildinfo  background.html  clinical.html  deep_learning.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
notebooks/: extract.ipynb  generate.ipynb  infer.ipynb  inference.ipynb  interpret.ipynb  interpretability.ipynb  label_extraction.ipynb  preprocessing.ipynb  random_search.ipynb  train.ipynb  training.ipynb  training_classification.ipynb  training_custom.ipynb  training_reconstruction.ipynb  training_regression.ipynb  tsvtools.ipynb
src/: extract.py  generate.py  infer.py  inference.py  interpret.py  interpretability.py  label_extraction.py  preprocessing.py  preprocessing_pet.py  preprocessing_t1_lin.py  random_search.py  train.py  training.py  training_classification.py  training_custom.py  training_reconstruction.py  training_regression.py  tsvtools.py
src/data/: adni_after_qc.tsv
(+44 files in other folders)
