[tool.poetry]
name = "clinicadl-handbook"
version = "1.0.0"
description = "ClinicaDL Handbook"
authors = ["The Aramis Lab"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jupyter-book = "^0.8.3"
torchsummary = "^1.5.1"
clinicadl = "^1.1.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^1.2.21"
jupytext = "^1.7.1"
sphinxcontrib-bibtex = "^1.0.0"
sphinx-tabs = "^1.3.0"
sphinx-click = "^2.5.0"
markupsafe = "2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
