[tool.poetry]
name = "clinicadl-handbook"
version = "1.0.0"
description = "ClinicaDL Handbook"
authors = ["The Aramis Lab"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
jupyter-book = "^0.13.1"
torchsummary = "^1.4.0"
clinicadl = "^1.2.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.5.3"
jupytext = "^1.14.4"
sphinxcontrib-bibtex = "^2.5.0"
sphinx-tabs = "^3.4.0"
sphinx-click = "^4.4.0"
markupsafe = "^2.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
